[package]
name = "revm-passthrough-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
anvil = { git="https://github.com/foundry-rs/foundry.git" }
foundry-evm = { git="https://github.com/foundry-rs/foundry.git" }
foundry-common = { git="https://github.com/foundry-rs/foundry.git" }
jsonrpsee = "0.24.4"
tokio = { version="1.40.0", features=["full"] }
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
reth-rpc-eth-api = { git="https://github.com/paradigmxyz/reth.git" }
reth-rpc-eth-types = { git="https://github.com/paradigmxyz/reth.git" }
reth-rpc-types = { git="https://github.com/paradigmxyz/reth.git" }
reth-primitives = { git="https://github.com/paradigmxyz/reth.git" }
tracing = "0.1.40"
async-trait = "0.1.82"
eyre = "0.6.12"
alloy-provider = "0.3.5"
revm = "14.0.1"
serde_json = "1.0.128"
